# QtOnDirectCompose

./: CMakeLists.txt  compositor.cpp  compositor.hpp  crossfile.meson  main.cpp  main1.qml  main2.qml  meson.build  pkg-config  resource.qrc  simpleegl.cpp  toolchain.cmake
